platform/dependencies/minio/development-distributed/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-cluster
spec:
  selector:
    app: minio
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
